# torizon-samples

./: .gitignore  .gitlab-ci-scripts.yml  .gitlab-ci-tcb.yml  .gitlab-ci.yml  README.md  samples.json
adc/: .gitlab-ci.yml  Dockerfile  README.md
alsa/: CMakeLists.txt  README.md  alsa-example.cpp
apt-proxy/: Dockerfile  build.sh
aws-iot/: README.md  docker-compose.yaml
crank/: .gitlab-ci.yml  README.md  docker-compose.arm64.yml  docker-compose.armhf.yml
dbus/: README.md
debian-container/: .gitlab-ci.yml  README.md
dlr-gstreamer/: .gitlab-ci.yml  Dockerfile  README.md  README.txt  inference.py
gpio/: README.md  gpio-event-test.c
gpioinfluxdb/: GPIOInfluxDB.sln  GPIOInfluxDB.vcxproj  README.md  TorizonCppApp.targets  main.cpp
gps/: Dockerfile  README.md  readgps.py  requirements.txt
grafana/: .gitlab-ci.yml  Dockerfile  README.md  collectd.conf  docker-compose.override.arm64.yml  docker-compose.override.armhf.yml  docker-compose.override.yml  docker-compose.yml  influxdb.conf
gstreamer/: README.md
multi-display/: README.md
nodejs/: .gitlab-ci.yml  Dockerfile  README.md  app.js  docker-compose.yml  package.json
opencl/: .gitlab-ci.yml  Dockerfile  README.md
opencv/: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  opencv-example.py
openvpn/: README.md  start-docker-ovpn-server.sh
pwm/: .gitlab-ci.yml  Dockerfile  README.md
python-qml/: .gitlab-ci.yml  Dockerfile  README.md  cleanup.sh  requirements.txt  setup.sh
weather/src/: CMakeLists.txt  get-owm.cpp  weather.cpp
weather/src/include/: get-owm.h  weather.h
(+333 files in other folders)
